--- a/nav.html
+++ b/nav.html
@@ -17,46 +17,46 @@
             <ul class="nested">
               <li hidden><a href="#">#</a></li>
               <li hidden><a href="#">#</a></li>
-              <li><a href="2023_Lancaster.html">Lancaster 2023</a></li>
+              <li><a href="2023_Lancaster">Lancaster 2023</a></li>
             </ul>
   
           <li><span class="caret">2022</span>
             <ul class="nested">
-              <li hidden><a href="2022_Abbey.html">Abbey Tap House 1. 2 & 3</a></li>
-              <li hidden><a href="2022_Lancaster.html">Lancaster: Objects, Textures, Tags</a></li>
-              <li><a href="2022_Manchester.html">Unreleased: Adidas Moss-Side</a></li>
-              <li hidden><a href="2022_Inexcplicable.html">Zine: INEXPLICABLE</a></li>
+              <li hidden><a href="2022_Abbey">Abbey Tap House 1. 2 & 3</a></li>
+              <li hidden><a href="2022_Lancaster">Lancaster: Objects, Textures, Tags</a></li>
+              <li><a href="2022_Manchester">Unreleased: Adidas Moss-Side</a></li>
+              <li hidden><a href="2022_Inexcplicable">Zine: INEXPLICABLE</a></li>
             </ul>
   
           <li hidden><span class="caret">2021</span>
             <ul class="nested">
-              <li><a href="2021_Mallorca.html">Mallorca 2021</a></li>
-              <li><a href="2021_Morecambe.html">Morecambe Bay</a></li>
-              <li><a href="2021_Lancaster.html">Streets of Lancaster</a></li>
-              <li><a href="2021_Manchester.html">Manchester</a></li>
-              <li><a href="2021_Glasgow.html">Glasgow</a></li>
+              <li><a href="2021_Mallorca">Mallorca 2021</a></li>
+              <li><a href="2021_Morecambe">Morecambe Bay</a></li>
+              <li><a href="2021_Lancaster">Streets of Lancaster</a></li>
+              <li><a href="2021_Manchester">Manchester</a></li>
+              <li><a href="2021_Glasgow">Glasgow</a></li>
             </ul>
   
           <li><span class="caret">2020</span>
             <ul class="nested">
-              <li><a href="2020_Lancaster.html">All Roads Lead to Lancaster</a></li>
-              <li><a href="2020_NHNT.html">Neither Here Nor There</a></li>
-              <li hidden><a href="2020_Designs.html">Designs for another time</a></li>
+              <li><a href="2020_Lancaster">All Roads Lead to Lancaster</a></li>
+              <li><a href="2020_NHNT">Neither Here Nor There</a></li>
+              <li hidden><a href="2020_Designs">Designs for another time</a></li>
             </ul>
   
           <li><span class="caret">2019</span>
             <ul class="nested">
-              <li hidden><a href="2019_Gambia.html">Kunta Kinteh Island, Gambia</a> </li>
-              <li><a href="2019_Morecambe.html">Life In Morecambe</a></li>
-              <li><a href="2019_DM.html">The Decisive Moment</a></li>
-              <li hidden><a href="2019_Chun.html">Chunian Portraiture</a></li>
+              <li hidden><a href="2019_Gambia">Kunta Kinteh Island, Gambia</a> </li>
+              <li><a href="2019_Morecambe">Life In Morecambe</a></li>
+              <li><a href="2019_DM">The Decisive Moment</a></li>
+              <li hidden><a href="2019_Chun">Chunian Portraiture</a></li>
             </ul>
   
             <li hidden><span class="caret">ONGOING</span>
                 <ul class="nested">
                   <li hidden><a href="#">#</a></li>
                   <li hidden><a href="#">#</a></li>
-                  <li><a href="Gambia.html">Gambia 2019-</a></li>
+                  <li><a href="Gambia">Gambia 2019-</a></li>
                 </ul>
 
           </li>
@@ -66,12 +66,12 @@
           <li><span class="caret">SELECTED COMMISSIONS</span>
             <ul class="nested">
   
-                <li><a href="SL.html">Saintleamon</a></li>
-                <li><a href="MonHi.html">Monument Hifi</a></li>
-                <li><a href="NSDB.html">Non-Stop Dutty Bass</a></li>
-                <li><a href="Calliebirb.html">Calliebirb 02.04.21</a></li>
-                <li><a href="Isaac.html">Isaac 09.04.21</a></li>
-                <li><a href="Wedding_Samples.html">Wedding Samples (2021-)</a></li>
+                <li><a href="SL">Saintleamon</a></li>
+                <li><a href="MonHi">Monument Hifi</a></li>
+                <li><a href="NSDB">Non-Stop Dutty Bass</a></li>
+                <li><a href="Calliebirb">Calliebirb 02.04.21</a></li>
+                <li><a href="Isaac">Isaac 09.04.21</a></li>
+                <li><a href="Wedding_Samples">Wedding Samples (2021-)</a></li>
 
             </ul>
           </li>
@@ -79,7 +79,7 @@
 <ul>
               <li><span class="caret">MUSIC VIDEOS</span>
                 <ul class="nested">
-                  <li><a href="Ghost.html">LA1 COLLECTIVE - Ghost</a></li>
+                  <li><a href="Ghost">LA1 COLLECTIVE - Ghost</a></li>
                   <li><a href="https://youtu.be/SHtKtRB2nag">T.LEE - Gassed Like Dah</a></li>
                   <li><a href="https://youtu.be/ehMHD5lm7eI">T.LEE - The Question</a></li>
                 </ul>
