--- a/nav.html
+++ b/nav.html
@@ -3,7 +3,7 @@
     <p><br> CONTENTS <br></p>
     <ul>
       <li><a href="https://www.newplace2frown.com">Home</a></li>
-      <li><a href="https://newplace2frown.myshopify.com">Print Shop</a></li>
+      <li><a href="https://newplace2frown.myshopify.com">PRINT SALE! (<i>15% off</i>)</a></li>
       <li><a href="https://docs.google.com/document/d/11QvEfM6O2GNp7RlLfQz_ajvZM6Lw-ht_jjcX2RwSo-U/edit?usp=sharing">About Me</a></li>
       <li><a href="Booking">Book a shoot!</a></li>
       <li> <a href="#" id="pauseLink">Pause Slideshow (10s)</a> </li>
