--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
 
             <a href="index.html"> <img src="Media/WebLogo2.gif" alt="LE.ON_PHOTOS logo" width="250px" id="Logo"> </a>
 
-            <h1><br> Made by Leon Patrick Morgan <br> <br> - To move through the gallery <br>use the arrow keys or
-                click. </h1>
+            <h2>
+                <br> Made by Leon Patrick Morgan <br> <br> 
+                - To move through the gallery <br>
+                use the arrow keys or click. <br>
+                
+            </h2>
         </div>
 
         <div id="navigation-placeholder"> </div>
