--- a/nav.html
+++ b/nav.html
@@ -93,7 +93,7 @@
       <li><span class="caret">CONTACT ME</span>
         <ul class="nested">
           <li><a href="http://www.instagram.com/le.on_photos">Instagram</a></li>
-          <li><a href="mailto:newplace2frown@gmail.com">E-Mail</a></li>
+          <li><a href="mailto:newplace2frown@gmail.com?subject=Contact%20email">e-Mail</a></li>
           <li><a href="https://youtube.com/@newplace2frown">YouTube </a></li>
           <li><a href="https://linktr.ee/newplace2frown">Linktree</a></li>
           <li><a href="https://twitter.com/NewPlace2Frown">Twitter</a></li>
