--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
     <h1>Your Notes</h1>
     <ul>
       {% for note in site.notes %}
-        <li><a href="{{ note.url }}">{{ note.title }}</a></li>
+        <li><a href="{{ note.url | relative_url }}">{{ note.title }}</a></li>
       {% endfor %}
     </ul>
   </div>
