--- a/Docphot-Contextual-Statements.html
+++ b/Docphot-Contextual-Statements.html
@@ -12,6 +12,9 @@
             margin: 0 auto;
             padding: 20px;
         }
+        p {
+            text-align: justify;
+        }
         h1 {
             color: #333;
             border-bottom: 2px solid #666;
