--- a/Docphot-Contextual-Statements.html
+++ b/Docphot-Contextual-Statements.html
@@ -29,12 +29,18 @@
             border-bottom: 1px dashed #333;
         }
         .bilingual {
-            display: flex;
+            display: grid;
             justify-content: space-between;
             margin-top: 20px;
         }
         .english, .welsh {
-            width: 48%;
+            width: 100%;
+        }
+        .welsh {
+            border-bottom: 2px solid #333;
+        }
+        .english{
+            border-bottom: 1px dashed #666;
         }
         .project-title {
             font-style: italic;
