--- a/Docphot-Contextual-Statements.html
+++ b/Docphot-Contextual-Statements.html
@@ -52,13 +52,34 @@
         a:active {
             color: darkred;
         }
+        nav {
+            font-family: serif;
+            text-align: right;
+        }
+        nav ul li {
+            list-style: decimal;
+        }
     </style>
 </head>
 <body>
     <h1>SHADED Exhibition Contextual Statements</h1>
     <h3><a href="http://www.Instagram.com/shaded_exhibition">Click here for the SHADED Instagram</a></h3>
 
-    <h2>Eleanor Carrick - <span class="project-title">Pendragons</span></h2>
+    <nav>
+        <ul>
+          <li><a href="#EC">Eleanor Carrick - Pendragons</a></li>
+          <li><a href="#GB">Grace Barrett - Woven</a></li>
+          <li><a href="#KB">Kai Bentall - Sight Life</a></li>
+          <li><a href="#LM">Leon Morgan - Morfydd</a></li>
+          <li><a href="#OE">Ocean Elani - Circus Kids</a></li>
+          <li><a href="#SP">Scarlett Perkins - Clay Made</a></li>
+          <li><a href="#IB">Ioan Barrett - Tyndra</a></li>
+
+        </ul>
+      </nav>
+    
+
+    <h2 id="EC">Eleanor Carrick - <span class="project-title">Pendragons</span></h2>
     <div class="bilingual">
         <div class="english">
             <p>The Pontypridd <em>Pendragons</em> are a women's touch rugby team based in Rhondda Cynon Taf, initially established as a way for rugby union players to continue following their passion in a less strenuous method than full-contact rugby.</p>
@@ -72,7 +93,7 @@
         </div>
     </div>
 
-    <h2>Grace Barrett - <span class="project-title">Woven</span></h2>
+    <h2 id="GB">Grace Barrett - <span class="project-title">Woven</span></h2>
     <div class="bilingual">
         <div class="english">
             <p><em>Woven</em> centres on a community of quilters based in Pontypridd, documenting the historical significance and stories behind a craft that holds deep cultural and personal meaning yet remains largely underappreciated. Quilts are not just pieces of fabric; they represent histories, traditions, and emotional landscapes that are Woven together over time.</p>
@@ -86,7 +107,7 @@
         </div>
     </div>
 
-    <h2>Kai Bentall – <span class="project-title">Sight Life</span></h2>
+    <h2 id="KB">Kai Bentall – <span class="project-title">Sight Life</span></h2>
     <div class="bilingual">
         <div class="english">
             <p>Growing up watching his mother lose her vision slowly and seeing how she dealt with it affecting her work and life greatly changed Bentall's appreciation of the ability he has with his body. <em>Sight Life</em> explores the life of people experiencing visual impairment through photography and audio, showcasing the ways in this group experiences the world through other sensations such as touch and sound.</p>
@@ -100,7 +121,7 @@
         </div>
     </div>
 
-    <h2>Leon Morgan - <span class="project-title">Morfydd</span></h2>
+    <h2 id="LM">Leon Morgan - <span class="project-title">Morfydd</span></h2>
     <div class="bilingual">
         <div class="english">
             <p>Morfydd Llwyn Owen [b. 1891 – d. 1918] remains a key cultural touchstone in the South Wales Valleys. Her music, and her life story, touches the heart of all those who encounter it. <em>Morfydd</em> aims to examine and evoke the traces of this Welsh icon, through a physical and psychological exploration of her birthplace, Treforest.</p>
@@ -112,7 +133,7 @@
         </div>
     </div>
 
-    <h2>Ocean Elani – <span class="project-title">Circus Kids</span></h2>
+    <h2 id="OE">Ocean Elani – <span class="project-title">Circus Kids</span></h2>
     <div class="bilingual">
         <div class="english">
             <p><em>Circus Kids</em> depicts a group of young children who are learning circus skills with Citrus Arts, a group in Pontypridd, a town and close community in the Rhondda Valley. Circus skills promote development of physical literacy and socialisation, key skills which should be encouraged from a young age. Elani immersed herself in the club throughout this photo project to understand and explore its importance.</p>
@@ -127,7 +148,7 @@
 	</div>
 
 
-    <h2>Scarlett Perkins - <span class="project-title">Clay Made</span></h2>
+    <h2 id="SP">Scarlett Perkins - <span class="project-title">Clay Made</span></h2>
     <div class="bilingual">
         <div class="english">
             <p><em>Clay Made</em> encourages appreciation for the deep love and time that goes into making ceramic items. From a block of clay to the pottery wheel and then decoration, not forgetting many steps in-between, the process is not easy and should be celebrated each time.</p>
@@ -142,7 +163,7 @@
     </div>
 
 
-    <h2>Ioan Barrett - <span class="project-title">Tyndra</span></h2>
+    <h2 id="IB">Ioan Barrett - <span class="project-title">Tyndra</span></h2>
     <div class="bilingual">
         <div class="english">
             <p>Throughout this project, Barrett has collaborated closely with Cambria Archers to explore the deep sense of community that thrives within archery clubs. While often perceived as a quiet, individual sport, archery is, in reality, a profoundly social activity that fosters connection and mutual support. This project highlights the evolution from Cambria Bowmen to Cambria Archers, celebrating the club's transformation and commitment to inclusivity. By showcasing this transition, the work emphasises the shared spirit and welcoming culture that make archery a sport for everyone.</p>
