--- a/contact.html
+++ b/contact.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Contact — Photoblog</title>
+  <title>Contact — NewPlace2Frown</title>
   <link rel="stylesheet" href="assets/css/site.css">
 
 <style>
 /* make links prettier */
-h1 a {
+p a {
   text-decoration: none;
   color: darkred;
   font-family: serif;
 }
 
-h1 a:hover {
+p a:hover {
   text-decoration: underline;
 }
 
@@ -30,11 +30,12 @@ h1 a:hover {
     <section>
       <h2>Get in Touch I'd love to hear from you! </h2>
 
-      <h1><a href="mailto:newplace2frown@gmail.com">Email</a></h1>
-      <h1><a href="https://twitter.com/newplace2frown">Twitter</a></h1>
-      <h1><a href="https://instagram.com/le.on_photos">Instagram</a></h1>
-      <h1><a href="https://www.tiktok.com/@newplace2frown">Tiktok </a></h1>
-      <p>Feel free to reach out for collaborations, inquiries, or just to say hello! <br> <b>—Leon</b></p>
+      <p><a href="mailto:newplace2frown@gmail.com">Email</a></p>
+      <p><a href="https://twitter.com/newplace2frown">Twitter</a></p>
+      <p><a href="https://instagram.com/le.on_photos">Instagram</a></p>
+      <p><a href="https://www.tiktok.com/@newplace2frown">Tiktok </a></p>
+      <p><a href="https://soundcloud.com/m0rvidd">Soundcloud</a></p>
+      <p>Feel free to reach out for collaborations, inquiries, or just to say hello :) <br> <b>—Leon</b></p>
     </section>
 
     <figure>
