--- a/nav.html
+++ b/nav.html
@@ -13,7 +13,7 @@
       <summary>Photography</summary>
       <ul>
   <li><a href="/photos/portfolio.html">Portfolio</a></li>
-  <li><a href="/photos/prints.html">Prints</a></li>
+  <li><a href="https://newplace2frown.myshopify.com">Print Shop</a></li>
       </ul>
     </details>
 
@@ -41,7 +41,7 @@
       </ul>
     </details>
 
-    <div class="nav-folder">
+    <div class="nav-folder" style="display: none;">
   <a href="/unlinked/index.html">Unlinked</a>
     </div>
   </div>
