--- a/photos/portfolio.html
+++ b/photos/portfolio.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Portfolio — Photoblog</title>
+  <title>Portfolio — NewPlace2Frown</title>
   <link rel="stylesheet" href="../assets/css/site.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
   <main id="content" class="content">
     <header><h1>Portfolio</h1></header>
     <section>
-      <p>Portfolio page.</p>
+      <p>Images from 2019 to 2025.</p>
     </section>
 
     <section id="portfolio-gallery">
