--- a/unlinked/index.html
+++ b/unlinked/index.html
@@ -17,6 +17,7 @@
     <li><a href="notes.html">notes html</a></li>
     <li><a href="tips.html">tips html</a></li>
     <li><a href="board.html">board html</a></li>
+    <li><a href="/Docphot-Contextual-Statements.html">Shaded Exhibition Contextual Statements</a></li>
       </ul>
     </section>
   </main>
