--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Site with Sidebar Navigation</title>
+  <title>NewPlace2Frown | Leon Morgan</title>
   <link rel="stylesheet" href="assets/css/site.css">
 </head>
 <body>
