--- a/nav.html
+++ b/nav.html
@@ -28,7 +28,7 @@
     <details id="f-about" class="nav-folder">
       <summary>About</summary>
       <ul>
-  <li><a href="/about.html">About</a></li>
+  <li><a href="/aboutme.html">About</a></li>
   <li><a href="/contact.html">Contact</a></li>
       </ul>
     </details>
