Updated CSS and heading margin

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="assets/css/site.css">
 </head>
 <body>
-  <button id="sidebarToggle" class="mobile-toggle" aria-label="Open navigation" aria-expanded="false">☰</button>
+  <!-- fix sidebar button to the right on mobile -->
+   <button id="sidebarToggle" class="mobile-toggle" aria-label="Open navigation" aria-expanded="false" style="float: right;">☰</button>
 
   <aside id="sidebar" class="sidebar" aria-label="Site navigation">
     <!-- nav.html will be loaded here by assets/js/site.js -->
