--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- fix sidebar button to the right on mobile -->
-   <button id="sidebarToggle" class="mobile-toggle" aria-label="Open navigation" aria-expanded="false" style="float: right;">☰</button>
+   <button id="sidebarToggle" class="mobile-toggle" aria-label="Open navigation" aria-expanded="false">☰</button>
 
   <aside id="sidebar" class="sidebar" aria-label="Site navigation">
     <!-- nav.html will be loaded here by assets/js/site.js -->
@@ -21,7 +21,7 @@
       <h1>Hello!</h1>
     </header>
     <section>
-      <p>Welcome to my site, feel free to explore! <br> <b><i>—Leon</i></b></p>
+      <p><i>Interested in Grandmasters, quasars, and Malkovich</i> <br> <b><i>—Leon</i></b></p>
     </section>
     
     <section id="portfolio-gallery">
